// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reset Password Component should match snapshot when additionalVerification param is false and dateOfBirthMatch is true 1`] = `
<div>
  <div>
    <div>
      Header Component
    </div>
    <span>
      userEmail = test@tests.com
      productName = product
      isFirstTimeUser = false
    </span>
  </div>
  <div>
    <span>
      Reset Password Form Component
    </span>
    <span
      data-id="props"
    >
      resetPassword = function mockConstructor() {
        return fn.apply(this, arguments);
      }
      email = test@tests.com
      token = 1k2j32
      isFirstTimeUser = false
      productName = product
      clientId = clientA
    </span>
  </div>
</div>
`;

exports[`Reset Password Component should match snapshot when additionalVerification param is false and there is no dateOfBirthMatch error 1`] = `
<div>
  <div>
    <div>
      Header Component
    </div>
    <span>
      userEmail = test@tests.com
      productName = product
      isFirstTimeUser = false
    </span>
  </div>
  <div>
    <span>
      Reset Password Form Component
    </span>
    <span
      data-id="props"
    >
      resetPassword = function mockConstructor() {
        return fn.apply(this, arguments);
      }
      email = test@tests.com
      token = 1k2j32
      isFirstTimeUser = false
      productName = product
      clientId = clientA
    </span>
  </div>
</div>
`;

exports[`Reset Password Component should match snapshot when there is no dateOfBirthMatch error 1`] = `
<div>
  <div>
    <span>
      Verify Account Form Component
    </span>
    <span
      data-id="props"
    >
      email = test@tests.com
      token = 1k2j32
      dateOfBirthMatch = [object Object]
      verifyDoB = function mockConstructor() {
        return fn.apply(this, arguments);
      }
      setFormErrorIfDateOfBirthNoMatch = function mockConstructor() {
        return fn.apply(this, arguments);
      }
      clientId = clientA
    </span>
  </div>
</div>
`;

exports[`Reset Password Component should match snapshot when there is no dateOfBirthMatch error is true 1`] = `
<div>
  <div>
    <span>
      Verify Account Form Component
    </span>
    <span
      data-id="props"
    >
      email = test@tests.com
      token = 1k2j32
      dateOfBirthMatch = [object Object]
      verifyDoB = function mockConstructor() {
        return fn.apply(this, arguments);
      }
      setFormErrorIfDateOfBirthNoMatch = function mockConstructor() {
        return fn.apply(this, arguments);
      }
      clientId = clientA
    </span>
  </div>
</div>
`;
